--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/overview.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/overview.html
@@ -48,7 +48,7 @@
               <div class="margin">
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>What is our project about?</h2>
-                  <p class="margin-bottom">Hetior fuli beryi ghus vell consequt an molite dojei. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                
+                  <p class="margin-bottom">The goal of our project is to provide approachable explanations of how to break certain forms of encryption. We specifically attempt to explain 5 cryptographic attacks in 45 minute videos (with accompanying presentations). We hope students with a rudimentary understanding of computer science will be able to watch these and gain a broader understanding of encryption and the ways in which cryptographic algorithms have been exploited.</p>                
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Why is this topic important?</h2>
