--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/about-us.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/about-us.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Will Fletcher</h2>
-                  <p class="margin-bottom">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  <p class="margin-bottom">I'm Will, a senior Math and Computer Science major. I grew up in Minneapolis, MN and I will be returning to Minneapolis after graduation.</p>                 
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Logan Peters</h2>
