--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/citations.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/citations.html
@@ -62,8 +62,14 @@
                   <p class="margin-bottom">Iriure dolor in hendrerit duis autem vel eum in vulputate velit esse molestie vel illum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <h2>Will Fletcher</h2>
-                  <p class="margin-bottom">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  <h2>DES and Linear Cryptanalysis</h2>
+                  <p><a href="https://www.schneier.com/books/applied-cryptography/">Applied Cryptography by Bruce Schneier</a></p>
+                  <p><a href="http://www.cs.bc.edu/~straubin/crypto2017/heys.pdf">Howard Heys</a></p>
+                  <p><a href="https://www.youtube.com/watch?v=93PD9CqcZTg">IIT Kharagpur</a></p>
+                  <p><a href="https://link.springer.com/chapter/10.1007/978-3-319-70694-8_7#:~:text=Linear%20cryptanalysis%20of%20DES%2C%20proposed,and%20zero%2Dcorrelation%20linear%20cryptanalysis">Andrey Bogdanov and Philip S. Vejre</a></p> 
+                  <p><a href="https://link.springer.com/chapter/10.1007%2F3-540-48658-5_1">Mitsuru Matsui</a></p>
+                  <p><a href="https://link.springer.com/content/pdf/10.1007%2F3-540-48285-7_33.pdf">Mitsuru Matsui</a></p>
+                  <p><a href="https://searchsecurity.techtarget.com/tip/Expert-advice-Encryption-101-Triple-DES-explained">Search Security</a></p>             
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Logan Peters</h2>
