--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/slides.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/slides.html
@@ -56,8 +56,9 @@
                   <p class="margin-bottom">Iriure dolor in hendrerit duis autem vel eum in vulputate velit esse molestie vel illum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <h2>Will Fletcher</h2>
-                  <p class="margin-bottom">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  <h2>DES and Linear Cryptanalysis</h2>
+                  <p><a href="https://docs.google.com/presentation/d/1jJQzd_lI7GQB-L66Luniu7kpIG0EMlbIhorzRRKGf8o/edit?usp=sharing">Short Final Project</a></p>    
+                  <p><a href="https://docs.google.com/presentation/d/1tepvMaqVgXLOdlqBK1hTxFBy_Yp7Y88v8Pm06H76Qmk/edit?usp=sharing">Full Final Project</a></p>                   
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Logan Peters</h2>
