--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/videos.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/videos.html
@@ -48,11 +48,15 @@
               <div class="margin">
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Short Final Project</h2>
-                  <p class="margin-bottom">Hetior fuli beryi ghus vell consequt an molite dojei. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                
+                  <p><a href="https://drive.google.com/file/d/1T3mU1nvGmCI5IgBFBqHpLqZLPfyo5wne/view?usp=sharing">Here</a></p>                
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Full Final Project</h2>
-                  <p class="margin-bottom">Iriure dolor in hendrerit duis autem vel eum in vulputate velit esse molestie vel illum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  <p><a href="">Shor's</a></p> 
+                  <p><a href="">RC4</a></p>
+                  <p><a href="">Dual_EC_DRBG</a></p>
+                  <p><a href="">Linear Cryptanalysis</a></p>
+                  <p><a href="">MD5</a></p>   
                 </div>
               </div>
             </div>
