--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/slides.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/slides.html
@@ -66,7 +66,9 @@
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Yuting Su</h2>
-                  <p class="margin-bottom">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  https://drive.google.com/drive/folders/1cTTjUY3m2-ygvQdyP2boGNmD9kSQNuNP
+                  <p><a href="https://drive.google.com/drive/folders/1cTTjUY3m2-ygvQdyP2boGNmD9kSQNuNP">Short Final Project</a></p>    
+                  <p><a href="https://drive.google.com/drive/folders/1cTTjUY3m2-ygvQdyP2boGNmD9kSQNuNP">Full Final Project</a></p>                
                 </div>
               </div>
             </div>
