--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/videos.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/videos.html
@@ -49,20 +49,20 @@
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Short Final Project</h2>
                   <p><a href="https://drive.google.com/file/d/1T3mU1nvGmCI5IgBFBqHpLqZLPfyo5wne/view?usp=sharing">Full Video</a></p>
+                  <p><a href="">Shor's</a></p>
+                  <p><a href="https://drive.google.com/drive/folders/1-n7PeuaG960YC0FXfRfTQEUUwMv0i1q8?usp=sharing">RC4 and the Flurer, Mantin, and Shamir Attack</a></p>
                   <p><a href="https://drive.google.com/drive/folders/1cTTjUY3m2-ygvQdyP2boGNmD9kSQNuNP">Dual_EC_DRBG</a></p>    
                   <p><a href="https://drive.google.com/file/d/1oEvnKM9oXm7P01MG5A-lkhCGdj8odmyB/view?usp=sharing">DES and Linear Cryptanalysis</a></p>    
-                  <p><a href="https://drive.google.com/file/d/148vZPZYG6Xh0XQPpNYjuZ2bI0NNSaebQ/view?usp=sharing">MD5</a></p>
-                  <p><a href="https://drive.google.com/drive/folders/1-n7PeuaG960YC0FXfRfTQEUUwMv0i1q8?usp=sharing">RC4 and the Flurer, Mantin, and Shamir Attack</a></p> 
+                  <p><a href="https://drive.google.com/file/d/148vZPZYG6Xh0XQPpNYjuZ2bI0NNSaebQ/view?usp=sharing">MD5</a></p> 
                   
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Full Final Project</h2>
                   <p><a href="">Shor's</a></p> 
-                  <p><a href="">RC4</a></p>
+                  <p><a href="https://drive.google.com/drive/folders/1-n7PeuaG960YC0FXfRfTQEUUwMv0i1q8?usp=sharing">RC4 and the Flurer, Mantin, and Shamir Attack</a></p>
                   <p><a href="https://drive.google.com/drive/folders/1cTTjUY3m2-ygvQdyP2boGNmD9kSQNuNP">Dual_EC_DRBG</a></p>
                   <p><a href="https://drive.google.com/file/d/12J_9SjcXVvxbal1NOL3UATU7VylvetUU/view?usp=sharing">DES and Linear Cryptanalysis</a></p>
                   <p><a href="https://drive.google.com/file/d/1Msn3-IIayP1uFxVH3bwk5ylrss2STh-h/view?usp=sharing">MD5</a></p>   
-                  <p><a href="https://drive.google.com/drive/folders/1-n7PeuaG960YC0FXfRfTQEUUwMv0i1q8?usp=sharing">RC4 and the Flurer, Mantin, and Shamir Attack</a></p>
                 </div>
               </div>
             </div>
