--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/citations.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/citations.html
@@ -76,7 +76,7 @@
                   <p class="margin-bottom">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <h2>Yuting Su</h2>
+                  <h2>Dual_EC_DRBG</h2>
                   <p><a href="https://drive.google.com/drive/folders/1cTTjUY3m2-ygvQdyP2boGNmD9kSQNuNP">Dual_EC_DRBG</a></p>                 
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
