--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/about-us.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/about-us.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Logan Peters</h2>
-                  <p class="margin-bottom">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  <p class="margin-bottom">Hi, I'm Logan!  I use he/him/his pronouns and am from Ames, Iowa</p>                 
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Yuting Su</h2>
