--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/about-us.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/about-us.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Eliot Huh</h2>
-                  <p class="margin-bottom">Iriure dolor in hendrerit duis autem vel eum in vulputate velit esse molestie vel illum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  <p class="margin-bottom">I'm Eliot, a senior Math and Computer Science major.</p>                 
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Will Fletcher</h2>
