--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/citations.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/citations.html
@@ -58,8 +58,12 @@
                   <p><a href="https://www.win.tue.nl/hashclash/rogue-ca/">Eindhoven University of Technology</a></p>
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <h2>Eliot Huh</h2>
-                  <p class="margin-bottom">Iriure dolor in hendrerit duis autem vel eum in vulputate velit esse molestie vel illum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  <h2>RC4</h2>
+                  <p><a href="https://www.schneier.com/books/applied-cryptography/">Applied Cryptography by Bruce Schneier</a></p>
+                  <p><a href="https://www.youtube.com/watch?v=2o3Hs-JDWLs"</a>Naval Postgraduate School</p>
+                  <p><a href="https://www.geeksforgeeks.org/rc4-encryption-algorithm/"</a>geeksforgeeks.org</p>
+                  <p><a href="https://www.mattblaze.org/papers/others/rc4_ksaproc.pdf"></a>Fluhrer, Mantin, and Shamir</p>
+                  <p><a href="https://download.aircrack-ng.org/wiki-files/doc/using_FMS_attack.pdf">Rice University</a></p>
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>DES and Linear Cryptanalysis</h2>
