--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/slides.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/slides.html
@@ -54,7 +54,7 @@
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Eliot Huh</h2>
                   <p><a href="https://docs.google.com/presentation/d/1CU3YlqxjsGBtlJVComTJkV0gGn0PGGoMNeUVJZ1TVaU/edit?usp=sharing">Short Final Project</a></p>   
-                  <p><a href="https://docs.google.com/presentation/d/1VkUwGfBej3iKmiqkrIX96SRo96kfQ7onjbKhT9qEqb8/edit?usp=sharing">Full Final Project</a></p>                 
+                  <p><a href="https://docs.google.com/presentation/d/1k3AO23TcaAu7jZ4M84WuDYPo6ptWn-rX_ZStYFCCKMQ/edit?usp=sharing">Full Final Project</a></p>                 
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>DES and Linear Cryptanalysis</h2>
@@ -64,7 +64,8 @@
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Logan Peters</h2>
                   <p><a href="">Short Final Project</a></p>    
-                  <p><a href="https://docs.google.com/presentation/d/1VkUwGfBej3iKmiqkrIX96SRo96kfQ7onjbKhT9qEqb8/edit?usp=sharing">Full Final Project</a></p>                  
+                  <p><a href="https://docs.google.com/presentation/d/1VkUwGfBej3iKmiqkrIX96SRo96kfQ7onjbKhT9qEqb8/edit?usp=sharing">Full Final Project</a></p>
+                  <p><a href="https://docs.google.com/presentation/d/1wrtbvHVt0J_PzAbT08HipMmrzBneXOyHpj09Cb4K_7I/edit?usp=sharing">Short Final Project</a></p>
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Dual_EC_DRBG</h2>
