--- a/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/slides.html
+++ b/Website!-20210513T235427Z-001/Website!/cyptography_comps_website/slides.html
@@ -52,7 +52,7 @@
                   <p><a href="https://docs.google.com/presentation/d/1uEAIXdoP0HbnZr5k-rWtyDslGB_nHB_t8F6tArB9OGU/edit?usp=sharing">Full Final Project</a></p>            
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <h2>Eliot Huh</h2>
+                  <h2>RC4</h2>
                   <p><a href="https://docs.google.com/presentation/d/1CU3YlqxjsGBtlJVComTJkV0gGn0PGGoMNeUVJZ1TVaU/edit?usp=sharing">Short Final Project</a></p>   
                   <p><a href="https://docs.google.com/presentation/d/1k3AO23TcaAu7jZ4M84WuDYPo6ptWn-rX_ZStYFCCKMQ/edit?usp=sharing">Full Final Project</a></p>                 
                 </div>
@@ -62,10 +62,9 @@
                   <p><a href="https://docs.google.com/presentation/d/1jJQzd_lI7GQB-L66Luniu7kpIG0EMlbIhorzRRKGf8o/edit?usp=sharing">Full Final Project</a></p>                    
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <h2>Logan Peters</h2>
-                  <p><a href="">Short Final Project</a></p>    
+                  <h2>Shor's Algorithm</h2>
+                  <p><a href="https://docs.google.com/presentation/d/1wrtbvHVt0J_PzAbT08HipMmrzBneXOyHpj09Cb4K_7I/edit?usp=sharing">Short Final Project</a></p>   
                   <p><a href="https://docs.google.com/presentation/d/1VkUwGfBej3iKmiqkrIX96SRo96kfQ7onjbKhT9qEqb8/edit?usp=sharing">Full Final Project</a></p>
-                  <p><a href="https://docs.google.com/presentation/d/1wrtbvHVt0J_PzAbT08HipMmrzBneXOyHpj09Cb4K_7I/edit?usp=sharing">Short Final Project</a></p>
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
                   <h2>Dual_EC_DRBG</h2>
